Fix readme, Add hr, Adjust Spacing

--- a/styles.css
+++ b/styles.css
@@ -215,7 +215,6 @@ h2 {
 
 .program {
   padding-top: 36px;
-  padding-bottom: 48px;
   text-align: center;
 }
 
@@ -242,7 +241,6 @@ h2 {
 
 .playerList {
   padding-top: 36px;
-  padding-bottom: 60px;
   text-align: center;
 }
 
@@ -294,16 +292,20 @@ h2 {
 
 .aboutLogoTitle {
   padding-top: 60px;
-  padding-bottom: 24px;
 }
 
 .aboutLogoTitleCompetition {
   margin: 0 60px;
+  padding-top: 24px;
 }
 
 .logoImg {
   border: solid black 2px;
   margin: 16px 16px 0;
+}
+
+.pastCompetition {
+  padding-top: 24px;
 }
 
 .buc {
@@ -370,7 +372,6 @@ ul {
 
 .partners {
   padding-top: 24px;
-  padding-bottom: 12px;
   font-weight: 900;
 }
 
@@ -407,6 +408,12 @@ ul {
 .closeButton {
   text-align: end;
   padding-right: 30px;
+}
+
+hr {
+  border-color: #ec5242;
+  width: 36px;
+  height: 2px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -474,6 +481,7 @@ ul {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     max-width: 768px;
     margin-left: calc((100% - 766px) / 2);
+    padding-top: 48px;
   }
 
   .flexColumn {
@@ -509,6 +517,11 @@ ul {
     display: grid;
     grid-template-columns: 379px 379px;
     margin-left: calc((100% - 766px) / 2);
+    padding-top: 60px;
+  }
+
+  .playerSection > * {
+    padding: 15px 0;
   }
 
   .playerDescription {
@@ -551,5 +564,11 @@ ul {
   .grid2 {
     grid-template-columns: 379px 379px;
     margin-left: calc((100% - 766px) / 2);
+  }
+
+  .asa {
+    flex-direction: row;
+    justify-content: center;
+    gap: 5px;
   }
 }
